[package]
name = "Its-MyPic-Proto-Convert"
version = "0.1.0"
edition = "2021"

[dependencies]
protobuf = "3"
prost = "0.9"
prost-types = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
protobuf-codegen = "3"
protoc-rust = "^2.0"
prost-build = "0.9"
tonic-build = "0.5"
